--- a/policy.html
+++ b/policy.html
@@ -7,7 +7,34 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
+  <h1>Política de Privacidad</h1>
+
+  <div class="text">
+    <p>
+      Esta aplicación no tiene relación con la Pontificia Universidad Católina de Chile (PUC) ni con ninguno de sus departamentos.
+    </p>
+
+    <p>
+      La aplicación (de manera opcional) requiere de las credenciales del usuario para poder ingresar a los servicios de manera directa. El usuario al momento de ingresarlas, queda bajo su responsabilidad la seguridad y uso del dispositivo.
+    </p>
+
+    <p>
+      Las credenciales guardadas solo se utilizarán en el sitio web donde explícitamente quieran ingresar. Estas credenciales serán encriptadas en el dispositico con el fin de prevenir su hurto.
+    </p>
+
+    <p>
+      Los accesos a las páginas web, como sus nombres, URLs o imágenes son propiedad de las personas de dicha página. En caso de querer ser removidas de la aplicación, puede hacerlo contactando a el o los desarrolladores.
+    </p>
+
+    <p>
+      Por razones de transparencia, la aplicación es código abierto y puede accederse a esta a través de la misma aplicación.
+    </p>
+  </div>
+  <div class="author">
+    <p>
+      Licencia GPL-3.0 y derechos de Patricio López Juri (patricio@lopezjuri.com)
+    </p>
+  </div>
 </body>
 
 </html>
