--- a/form.html
+++ b/form.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
+  <h1>Formulario</h1>
+  <h2>¿Quieres que tu sitio web aparezca en al aplicación?</h2>
+  <p>
+    Llena este formulario:
+    <a href="http://goo.gl/forms/OYSKwRPKox">Google Form</a>
+  </p>
 </body>
 
 </html>
