--- a/index.html
+++ b/index.html
@@ -1,13 +1,294 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-
 <head>
+  <title>Accesos UC - Aplicación no oficial con los servicios web de la Pontificia Universidad Católica de Chile.</title>
+    <link rel="stylesheet" href="https://d2kfjaekmjmy1l.cloudfront.net/base-vbe0f152623b1.css" data-bundle="base">
+    <link rel="stylesheet" href="https://d2kfjaekmjmy1l.cloudfront.net/websites-v4b21cfb5d51c.css" data-bundle="websites">
   <meta charset="utf-8">
-  <title>UC Access</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g" rel="shortcut icon" type="image/x-icon">
+
+<meta name="description" content="Ingresa rápidamente a los servicios de la universidad y olvidate de tu contraseña.">
+<meta name="keywords" content="alma mater, almapp, puc, uc, accesos, web">
+
+<!-- Facebook -->
+<meta property="og:site_name" content="Accesos UC">
+<meta property="og:title" content="Aplicación no oficial con los servicios web de la Pontificia Universidad Católica de Chile.">
+<meta property="og:description" content="Ingresa rápidamente a los servicios de la universidad y olvidate de tu contraseña.">
+<meta property="og:url" content="http://">
+<meta property="og:image" content="https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="app">
+<meta name="twitter:title" content="Accesos UC - Aplicación no oficial con los servicios web de la Pontificia Universidad Católica de Chile.">
+<meta name="twitter:description" content="Ingresa rápidamente a los servicios de la universidad y olvidate de tu contraseña.">
+<meta name="twitter:image:src" content="https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g">
+<meta name="twitter:domain" content="http://">
+<meta name="twitter:app:name:iphone" content="Accesos UC">
+<meta name="twitter:app:id:iphone" content="1086360418">
+<meta name="twitter:app:name:ipad" content="Accesos UC">
+<meta name="twitter:app:id:ipad" content="1086360418">
+
+<!-- Apple Smart App Banner -->
+<meta name="apple-itunes-app"
+  content="app-id=1086360418,
+  affiliate-data=1001l5Yq">
+
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Raleway:400,100,200,300,500,600,700,800,900" rel="stylesheet" type="text/css">
+
+<style type="text/css">
+    #public-landing-page .container {
+      font-family: 'Lato', sans-serif !important;
+    }
+    #public-landing-page.template-1 .hero,
+    #public-landing-page.template-2 .hero,
+    #public-landing-page.template-3 .hero,
+    #public-landing-page.template-4 .hero,
+    #public-landing-page.template-7 .hero,
+    #public-landing-page.template-8 .hero .graphic,
+    #public-landing-page.template-9 .bg-color,
+    #public-landing-page .store-badge-white-text,
+    #public-landing-page.template-1color .hero,
+    #public-landing-page.template-2color .hero {
+      background: #FCAA00;
+    }
+    #public-landing-page.template-5 .hero h2,
+    #public-landing-page.template-6 .hero h1,
+    #public-landing-page.template-8 .hero,
+    #public-landing-page.template-9 .hero h2,
+    #public-landing-page .hero .btn,
+    #public-landing-page .navbar .btn,
+    #public-landing-page .navbar.invert-navbar a,
+    #public-landing-page footer a,
+    #public-landing-page .benefit-header {
+      color: #FCAA00;
+    }
+    #public-landing-page .btn.btn-primary.btn-primary-invert,
+    #public-landing-page .navbar.invert-navbar .btn.btn-primary,
+    #public-landing-page .navbar .navbar-collapse.in .btn.btn-primary,
+    #public-landing-page .navbar .navbar-toggle .icon-bar,
+    #public-landing-page .download-text {
+      color: white;
+      background-color: #FCAA00;
+    }
+
+
+    #public-landing-page.template-1 .hero,
+    #public-landing-page.template-2 .hero,
+    #public-landing-page.template-4 .hero {
+      overflow: hidden;
+    }
+    #public-landing-page .hero .blurred-cover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 1px;
+      background-image: url('https://lh3.googleusercontent.com/8rhC0NLh9FU8F0B2K_GrJzLpo-VryFeoj4n4z3uIUq-x6hpmJDfOHudbSFk0c2M0VY60F7B4BFGg68H-3hYk41BjE1Zk');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      -webkit-filter: blur(50px);
+      -moz-filter: blur(50px);
+      -o-filter: blur(50px);
+      -ms-filter: blur(50px);
+      filter: blur(50px);
+      margin: -60% -40% -40%;
+    }
+    #public-landing-page .hero .blurred-cover .darken {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 2px;
+      background: rgba(0,0,0,.3);
+    }
+
+  @media screen and (max-width: 767px) {
+      #public-landing-page.template-9 .hero h1 {
+        background: #FCAA00;
+      }
+  }
+
+</style>
+
+
 </head>
+<body><div id="skit-controller"><div id="public-landing-page"
+  class="
+    template-2color
 
-<body>
-  <h1>Hello world</h1>
+
+  ">
+
+  <section class="hero">
+  <div class="container">
+    <nav class="navbar navbar-default
+
+   invert-buttons
+  ">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand visible-xs" href="https://launchkit.io/websites/mXcmJR0fJqk">
+          <img alt="Accesos UC" src="https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g" class="app-icon">
+        </a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="visible-xs"><a href="https://launchkit.io/websites/mXcmJR0fJqk">Home Page</a></li>
+          <li class="visible-xs"><a href="https://itunes.apple.com/app/id1086360418?mt&#x3D;8" target="_blank">Download from App Store</a></li>
+          <li><a href="https://almapp.github.io/uc-courses-mobile" target="_blank">Cursos</a></li>
+          <li><a href="https://almapp.github.io/uc-access" target="_blank" class="btn btn-primary">Accesos</a></li>
+          <li><a href="https://almapp.github.io/uc-maps-mobile" target="_blank">Mapas</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+      <div class="row">
+        <div class="col-sm-5 col-xs-12 text-center">
+          <img src="https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g" class="app-icon img-rounded">
+        </div>
+        <div class="col-sm-7 col-xs-12">
+          <h1>  Accesos UC
+</h1>
+          <h2>Aplicación no oficial con los servicios web de la Pontificia Universidad Católica de Chile.</h2>
+            <a href="https://itunes.apple.com/app/id1086360418?mt&#x3D;8" class="app-store-badge" target="_blank">
+    <img src="https://d2kfjaekmjmy1l.cloudfront.net/images/websites/public/app-store-black-on-color@2x-vd3eb32e86e4d.png">
+  </a>
+
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+  </div>
+</section>
+
+
+    <section class="description">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5 col-xs-12 pull-right">
+            <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2F8rhC0NLh9FU8F0B2K_GrJzLpo-VryFeoj4n4z3uIUq-x6hpmJDfOHudbSFk0c2M0VY60F7B4BFGg68H-3hYk41BjE1Zk&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of Accesos UC">
+        </div>
+        <div class="item">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2F8M0vFGLqt3dGytlgnjnkeRyNl9HNQXCIkTsbbskzjmTM7IyvBVOYp-M2SZbpAkOVrz7BZSVAJRiTc73VzTolOMeP6Gxu4A&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of Accesos UC">
+        </div>
+        <div class="item">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2FauqRlsqfB8dvTuZgo4HPP75fjctyUSWjtA4Aogcs8MdX-dIQbZR45SGTKrnVMOdirkyGynqQGOsfg4Sc5075yqEgrfrf&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of Accesos UC">
+        </div>
+        <div class="item">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2FosgG49rOudpfx95SuJUqQSP4JvG1-MbHnrx1TFij69iFzKEilnnf7GWNIfe2kqnJihoxsQOVxEzPtcoST8inRfCCCYGSqw&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of Accesos UC">
+        </div>
+    </div>
+  </div>
+      </div>
+      <div class="col-sm-7 col-xs-12 description-text">
+        <p>Accesos UC forma parte de la segunda versión de Alma Máter UC, que en su versión anterior alcanzó más de 15.000 descargas.<br>Ingresa rápidamente a los servicios de la universidad y olvidate de andar ingresando tu clave a cada momento.<br><br>Esta aplicación no es oficial y está hecha por la comunidad, para la comunidad.<br><br>Puedes solicitar agregar tu sitio web a la aplicación para hacerlo conocido entre los estudiantes.<br><br>Ingreso automático a:<br>* Portal UC<br>* WebCursos UC<br>* Siding<br>* Labmat<br><br>Páginas de la comunidad, partidos políticos y propias de las facultades y sus centros de alumnos.<br><br>¿Eres desarrollador?<br>Esta aplicación es Open Source y su código está disponible bajo licencia GPL-3.0 en:<br>https://github.com/almapp/uc-access-ios</p>
+          <a href="https://itunes.apple.com/app/id1086360418?mt&#x3D;8" class="app-store-badge" target="_blank">
+    <span class="store-badge-white-text">
+      <img src="https://d2kfjaekmjmy1l.cloudfront.net/images/websites/public/app-store-white-text@2x-ve7b5d0ffae4e.png">
+    </span>
+  </a>
+
+
+      </div>
+    </div>
+  </div>
+</section>
+    <footer>
+    <div class="container">
+      <div class="footer-nav col-xs-12 col-sm-8 pull-right text-right">
+          <a href="https://almapp.github.io/uc-access/policy" target="_blank">Privacy Policy</a>
+          <a href="https://github.com/almapp" target="_blank"><i class="fa fa-github"></i></a>
+          <a href="https://twitter.com/AlmaMaterApp" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.facebook.com/AlmaMaterApp/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+      </div>
+
+        <div class="launchkit-promo col-xs-12 col-sm-4">
+          <img src="https://d2kfjaekmjmy1l.cloudfront.net/images/icon-v8d70a510a2c9.png">
+          <a href="https://launchkit.io/websites/?utm_campaign=Websites%20Footer&amp;utm_medium=referral&amp;utm_source=mXcmJR0fJqk" target="_blank">Website by LaunchKit</a>
+        </div>
+
+    </div>
+  </footer>
+
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+</div>
+  <script>
+    window.skit = (function() {
+      var objects = {};
+      var modules = {};
+      function define(resourcePath, deps, fn) {
+        modules[resourcePath] = {deps: deps, fn: fn};
+      }
+      function load(resourcePath) {
+        if (!(resourcePath in objects)) {
+          if (resourcePath in modules) {
+            var module = modules[resourcePath];
+            var args = [];
+            for (var i = 0; i < module.deps.length; i++) {
+              args.push(load(module.deps[i]));
+            }
+            objects[resourcePath] = module.fn.apply(window, args);
+          } else {
+            objects[resourcePath] = null;
+          }
+        }
+        return objects[resourcePath];
+      }
+      return {
+        define: define,
+        modules: modules,
+        env: {"productionAPI":true,"appEngineHost":"https://launchkit-images.appspot.com/","publicRoot":"public"},
+        load: load
+      };
+    })();
+  </script>
+    <script src="https://d2kfjaekmjmy1l.cloudfront.net/base-vbebb4647476c.js" data-bundle="base"></script>
+    <script src="https://d2kfjaekmjmy1l.cloudfront.net/websites-v35ef2e14c9df.js" data-bundle="websites"></script>
+  <script>
+    (function() {
+        var netproxy = skit.load("skit.platform.netproxy:js");
+          netproxy.__register__("lk", {"name":"lk","csrfToken":"HI/J7acZ0fXWfldCr9ckHQ=="});
+
+      var ControllerKlass = skit.load("public.websites.__id__.WebsitePublic:js");
+      var controller = new ControllerKlass({"__id__":"mXcmJR0fJqk"});
+
+      var controllerProperties = {"website":{"facebookLink":"https://www.facebook.com/AlmaMaterApp/","domain":null,"disableLkBranding":false,"termsLink":"","appName":"Accesos UC","images":{"screenshots":{"iPhone":[{"url":"https://lh3.googleusercontent.com/8rhC0NLh9FU8F0B2K_GrJzLpo-VryFeoj4n4z3uIUq-x6hpmJDfOHudbSFk0c2M0VY60F7B4BFGg68H-3hYk41BjE1Zk","imageId":"T1hvp1E6lqY"},{"url":"https://lh3.googleusercontent.com/8M0vFGLqt3dGytlgnjnkeRyNl9HNQXCIkTsbbskzjmTM7IyvBVOYp-M2SZbpAkOVrz7BZSVAJRiTc73VzTolOMeP6Gxu4A","imageId":"ugLXLz8vhg8"},{"url":"https://lh3.googleusercontent.com/auqRlsqfB8dvTuZgo4HPP75fjctyUSWjtA4Aogcs8MdX-dIQbZR45SGTKrnVMOdirkyGynqQGOsfg4Sc5075yqEgrfrf","imageId":"vutyD92JonQ"},{"url":"https://lh3.googleusercontent.com/osgG49rOudpfx95SuJUqQSP4JvG1-MbHnrx1TFij69iFzKEilnnf7GWNIfe2kqnJihoxsQOVxEzPtcoST8inRfCCCYGSqw","imageId":"vCbo9zI2mr8"}]},"icon":{"url":"https://lh3.googleusercontent.com/Zm0hRrrOAWND_T3lyYUFmojlFz839JWO9zwKQcHsJoOL20v3bW_7V49CJXbrlywAA7pPUGy-31W_PT8irvDMRQ38RtYq4g","id":"-V8CcXhH_dg"}},"blogLink":"https://almapp.github.io/uc/","supportLink":"","longDescription":"Accesos UC forma parte de la segunda versión de Alma Máter UC, que en su versión anterior alcanzó más de 15.000 descargas.\nIngresa rápidamente a los servicios de la universidad y olvidate de andar ingresando tu clave a cada momento.\n\nEsta aplicación no es oficial y está hecha por la comunidad, para la comunidad.\n\nPuedes solicitar agregar tu sitio web a la aplicación para hacerlo conocido entre los estudiantes.\n\nIngreso automático a:\n* Portal UC\n* WebCursos UC\n* Siding\n* Labmat\n\nPáginas de la comunidad, partidos políticos y propias de las facultades y sus centros de alumnos.\n\n¿Eres desarrollador?\nEsta aplicación es Open Source y su código está disponible bajo licencia GPL-3.0 en:\nhttps://github.com/almapp/uc-access-ios","font":"Lato","playStoreId":"","isPro":null,"waitingListLink":"","primaryColor":"#FCAA00","keywords":"alma mater, almapp, puc, uc, accesos, web","googleAnalyticsId":"","itunesProviderToken":"","shortDescription":"Ingresa rápidamente a los servicios de la universidad y olvidate de tu contraseña.","id":"mXcmJR0fJqk","loginLink":"https://almapp.github.io/uc/","privacyLink":"https://almapp.github.io/uc-access/policy","itunesCampaignToken":"","author":"Patricio López","tagline":"Aplicación no oficial con los servicios web de la Pontificia Universidad Católica de Chile.","frameScreenshots":"white","customCss":null,"itunesId":"1086360418","pressLink":"","instagramLink":"","customLinkLabel":"","twitterLink":"https://twitter.com/AlmaMaterApp","template":"2color","mixpanelBadge":false,"customLink":"","homeUrl":"/websites/mXcmJR0fJqk"}};
+      for (var k in controllerProperties) {
+        controller[k] = controllerProperties[k];
+      }
+
+      window.skit.controller = controller;
+      controller.recursiveLoad();
+      controller.recursiveReady();
+    })();
+  </script>
 </body>
-
-</html>
