--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <a href="https://almapp.github.io/uc-access/policy" target="_blank">Privacy Policy</a>
           <a href="https://github.com/almapp" target="_blank"><i class="fa fa-github"></i></a>
           <a href="https://twitter.com/AlmaMaterApp" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.facebook.com/AlmaMaterApp/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+          <a href="https://www.facebook.com/AlmaMaterApp" target="_blank"><i class="fa fa-facebook-square"></i></a>
       </div>
 
         <div class="launchkit-promo col-xs-12 col-sm-4">
